# HireMeBahamas

./: .coderabbit.yaml  .dockerignore  .env.ai  .env.example  .env.production.example  .gitattributes  .gitignore  .lighthouserc.js  .nixpacksignore  .npmrc  .prettierignore  .prettierrc  .railwayignore  .render-buildpacks.json  .vercelignore  405_DIAGNOSIS_COMPLETE.md  405_ERROR_FIX_COMPLETE.md  405_HEAD_FIX_COMPLETE.md  405_diagnostic_results.json  405_error_test.html  405_fix_summary.json  AB_TESTING_FRAMEWORK.md  AB_TESTING_INTEGRATION_GUIDE.md  ACTION_REQUIRED_RAILWAY.py  ADMIN_POST_VISIBILITY_FIX.md  AI_API_SETUP_README.md  AI_PERMANENT_NETWORK_FIX_README.md  AI_PLATFORM_LAUNCHER.bat  AI_SOLUTION_SUCCESS.md  AI_SYSTEM_README.md  ALL_SYSTEMS_OPERATIONAL.md  API_CONNECTION_GUIDE.md  API_HEALTH_ENDPOINT_SUMMARY.md  API_STABILIZATION_SUMMARY.md  API_URL_FIX_SUMMARY.md  API_VERSIONING.md  APPLY-PR-360-FIX.md  APP_DEPLOYMENT_FIX_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  (+1582 more)
.github/: ARTIFACT_WARNING_FIX.md  BACKEND_BUILD_FIX.md  COPILOT_WORKSPACE_INFO.md  DOCKER_SECURITY.md  FROGBOT_CHECKLIST.md  RENDER_DEPLOYMENT.md  TASK_COMPLETION.md  copilot-instructions.md
admin-panel/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
admin_panel/: dependencies.html
alembic/: env.py
api/: .gitignore  __init__.py  cors_utils.py  database.py  db_url_utils.py  hello.py  index.py  main.py  middleware.py  minimal.py  models.py  models_final.py  models_sqlite.py  render.yaml  requirements.txt  simple_main.py  test.py  test_backend_cache_headers.py  test_import.py
app/: ERROR_LOGGING_README.md  __init__.py  config.py  database.py  database.py.backup  errors.py  example_integration.py  logging.py  main.py  models.py  redis.py
backend/: .dockerignore  .env.bulletproof.example  .env.example  Dockerfile  PROJECT_STRUCTURE.md  Procfile  STRUCTURE_DIAGRAM.md  STRUCTURE_REFACTOR_SUMMARY.md  add_hireme_column.py  add_profile_fields.py  app.py  background_jobs.py  create_all_tables.py  create_database_indexes.py  create_notifications_table.py  create_subscription_tables.py  create_tables.py  create_tables_direct.py  demo_db_retry_simple.py  demo_panic_shield.py  demo_user_cache.py  example_db_retry_usage.py  example_request_timeout_usage.py  example_usage.py  gunicorn.conf.py  health_app.py  hiremebahamas.db-shm  hiremebahamas.db-wal  manual_test_db_error_logging.py  migrate_login_indexes.py  migrate_messages_sqlite.py  migrate_messages_table.py  migrate_oauth.py  requirements.txt  requirements_bulletproof.txt  test_500_error_fix.py  test_app.py  test_auth_import.py  test_auth_me_minimal_response.py  test_background_jobs.py  (+61 more)
diagnostic/: EXAMPLES.sh  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SECURITY_SUMMARY.md  check_vercel_connection.py  requirements.txt  test_diagnostic.py
docker/: nginx-loadbalancer.conf
docs/: AUTOMATED_DEPENDENCY_FIX_SUMMARY.md  CACHE_BEFORE_AFTER.md  CACHE_IMPLEMENTATION.md  CACHE_QUICK_START.md  DATABASE_CONNECTION_PATTERN.md  DATABASE_INDEXES.sql  DEPENDENCY_MANAGEMENT.md  GOOGLE_CLOUD_STORAGE.md  HEALTH_CHECK_GUIDE.md  HIGH_AVAILABILITY.md  HIGH_AVAILABILITY_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MONITORING.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  REGISTRATION_TROUBLESHOOTING.md  RENDER_502_FIX_GUIDE.md  RENDER_BULLETPROOF_DEPLOYMENT.md  RENDER_COLD_START_FIX.md  RENDER_CRON_JOB_SETUP.md  RENDER_QUICK_START.md  SECURITY_SUMMARY_REGISTRATION.md  SYSTEM_DEPENDENCIES.md  USER_ANALYTICS_GUIDE.md  VERCEL_POSTGRES_DEPLOYMENT_CHECKLIST.md  VERCEL_POSTGRES_MONITORING.sql  VERCEL_POSTGRES_QUICK_START.md  VERCEL_POSTGRES_VISUAL_GUIDE.md  WORKFLOW_RECOVERY.md  asyncpg-binary-installation.md
examples/: README.md  hello_hiremebahamas.py  postgres_log_filter_examples.sh  speed-optimization-examples.md
frontend/: .dockerignore  .env.example  .env.production.example  .env.production.template  .gitignore  .lighthouserc.json  .npmrc  ARCHITECTURE_VISUAL.md  (+36 more)
(+604 files in other folders)
