# Python project configuration for HireMeBahamas Backend
# Dependencies are managed in requirements.txt and api/requirements.txt

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiremebahamas-backend"
version = "2.0.0"
requires-python = ">=3.12"
description = "HireMeBahamas Vercel Serverless Backend - Immortal Edition"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "backend*"]
exclude = ["frontend*", "admin[-_]panel*", "scripts*", "*.tests", "*.tests.*", "tests.*", "tests", "docker*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | frontend
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.autopep8]
max_line_length = 88
aggressive = 2

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"